--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   ],
   "dependencies": {
     "@sanity/base": "^2.30.0",
+    "@sanity/components": "^2.14.0",
     "@sanity/core": "^2.30.0",
     "@sanity/default-layout": "^2.30.0",
     "@sanity/default-login": "^2.30.0",
@@ -22,6 +23,7 @@
     "@sanity/eslint-config-studio": "^2.0.0",
     "@sanity/vision": "^2.30.0",
     "eslint": "^8.6.0",
+    "groq": "^2.29.3",
     "prop-types": "^15.7",
     "react": "^17.0",
     "react-dom": "^17.0",
